# learning

./: .gitignore  .gitmodules  CapitalsDirectory.cpp  DiscountCalculator.cpp  EvenNumbers.cpp  PalindromFilter.cxx  README.md  ReverseVector.cpp  SecondOccurence.cpp  TablesIO.cpp  glava5.cpp  name_pairs.cpp  rational.cpp  rational_throw.cpp  test.cpp  test1.cpp
Coursera_C++_MFTI/White_Belt/: FunctionClass.cpp  MonthCase.cpp  a.out  anagrams.cpp  average_temperature.cpp  binary_function.cpp  bus_stops.cpp  capitals_directory.cpp  ensure_equal.cpp  factorial.cpp  fraction_calculator.cpp  incognizable.cpp  monthly_cases.cpp  move_strings.cpp  queue.cpp  rational.cpp  rational_interface.cpp  rational_throw.cpp  reversible_string.cpp  second_occurence.cpp  set_of_map_values.cpp  sorted_chars.cpp  sorted_strings.cpp  sum_of_numbers.cpp  synonym_dictionary.cpp  unique_words.cpp  update_if_greater.cpp  variable_size_arrays.cpp  working_with_files.cpp
Coursera_C++_MFTI/Yellow_Belt/: GetRefStrict.cpp  TaskTreker.cpp  TaskTreker.h  TemplateSqr.cpp  a.out  average_temperature2.cpp  block_mass.cpp  code_refactoring.cpp  mainCoursera.cpp  matrix_sum.cpp  pointer.cpp  rectangle.h  region_database.cpp  remove_duplicates.cpp  sms_email_notifier.cpp  sort_merge2.cpp  split_into_words.cpp  starter.cpp  sum_reverse_sort.cpp  template_square_func.cpp  test.cpp  test_average_temperature.cpp  test_palindrome.cpp  test_person.cpp  test_rational.cpp
Coursera_C++_MFTI/Yellow_Belt/BusStops/: .CMakeLists.txt.swp  .main.cpp.swp  .starter.h.swp  CMakeLists.txt  a.out  main.cpp  starter.cpp
Coursera_C++_MFTI/Yellow_Belt/BusStops/__build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  busStops  cmake_install.cmake
Coursera_C++_MFTI/Yellow_Belt/BusStops/__build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Coursera_C++_MFTI/Yellow_Belt/BusStops/include/: .BusStops.h.swp  BusStops.h
Coursera_C++_MFTI/Yellow_Belt/BusStops/tests/: .BusStopsTests.cpp.swp  .CMakeLists.txt.swp  BusStopsTests.cpp  CMakeLists.txt  a.out
Coursera_C++_MFTI/Yellow_Belt/PhoneNumber/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  phone_number.cpp  phone_number.h
Coursera_C++_MFTI/Yellow_Belt/PhoneNumber/googletest-build/: CTestTestfile.cmake
Coursera_C++_MFTI/Yellow_Belt/PhoneNumber/googletest-build/googletest/: CTestTestfile.cmake  Makefile
Coursera_C++_MFTI/Yellow_Belt/PhoneNumber/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Coursera_C++_MFTI/Yellow_Belt/PhoneNumber/googletest-download/googletest-prefix/tmp/: googletest-gitupdate.cmake
Coursera_C++_MFTI/Yellow_Belt/PhoneNumber/tests/: CMakeLists.txt  Makefile
OtherProblems/: glava5-8.cpp  input.txt  stepik1.8.cpp  test4.cpp  test7.cpp
OtherProblems/DesignPatterns/: Observer.cpp  a.out
OtherProblems/Draft/: A.cpp  A.h  B.cpp  Hello.cpp  a.out  main.cpp  superDuper
OtherProblems/GoogleTests/: SquareRoot.cpp
c++_white_belt/: .sum_of_numbers.cpp.swp  a.out  quadratic_equation.cpp
coursera/brown_belt/: 1.cpp  a.out
coursera/red_belt/: 1.cpp  Coursera  a.out  bikes.cpp  file_types.cpp  fixture.cpp
coursera/red_belt/final_case_first_part/: CMakeLists.txt  main.cpp
coursera/red_belt/final_case_first_part/include/: entry.h  inverted_index.h  iterator_range.h  parse.h  profile.h  search_server.h  split_into_words.h  synchronized.h
coursera/red_belt/final_case_first_part/src/: entry.cpp  inverted_index.cpp  parse.cpp  search_server.cpp  split_into_words.cpp
coursera/red_belt/final_case_first_part/tests/: test.cpp
coursera/white_belt/: draft.txt  lexicographical_compare.cpp  names_surnames.cpp  sorted_array.cpp
coursera/yellow_belt/: code_refactoring.cpp  dog_animal.cpp  enum_of_permutation.cpp  print_stats.cpp  test1.cpp  test_equation.cpp  virtual_destructor.cpp
coursera/yellow_belt/phone_number/: CMakeLists.txt  Makefile  a.out  cmake_install.cmake  phoneNumber  phone_number.cpp
coursera/yellow_belt/phone_number/Testing/Temporary/: CTestCostData.txt
coursera/yellow_belt/phone_number/googletest-build/: Makefile  cmake_install.cmake
coursera/yellow_belt/phone_number/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
coursera/yellow_belt/phone_number/googletest-build/googletest/: cmake_install.cmake
coursera/yellow_belt/phone_number/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake
coursera/yellow_belt/phone_number/tests/: CTestTestfile.cmake  Makefile  PhoneNumberTests.cpp  TestsWithoutCmake.cpp  cmake_install.cmake
coursera/yellow_belt/submodules/date_parse_date/: CMakeLists.txt
coursera/yellow_belt/submodules/date_parse_date/__build/: CTestTestfile.cmake  DateFinalProject  cmake_install.cmake
coursera/yellow_belt/submodules/date_parse_date/__build/Testing/Temporary/: CTestCostData.txt
coursera/yellow_belt/submodules/date_parse_date/tests/: date_test.cpp
design_patterns/: a.out  class Base.cpp  command_bad_version.cpp  decorator.cpp  file.txt
design_patterns/chain_of_responsibility/: main.cpp
design_patterns/command/: CMakeLists.txt  main.cpp
design_patterns/decorator/: main.cpp
design_patterns/factory_method/: main.cpp
design_patterns/mediator/: main.cpp
design_patterns/observer/: main.cpp
design_patterns/simple_factory/: main.cpp
design_patterns/singleton/: main.cpp
design_patterns/strategy/: main.cpp
other_problems/: 1.16.cpp  MapTest.cpp  NOD1.cpp  class IsSubdomain.cpp  glava4.cpp  test2.cpp  test3.cpp  test5.cpp  test6.cpp
other_problems/Draft/: B.h
other_problems/GoogleTests/: .SquareRoot.cpp.swp  .SquareRoot.h.swp  SquareRoot.h  a.out  unitTest_SquareRoot.cpp
qt/build-notepad-Desktop-Debug/: Makefile  moc_mainwindow.cpp  notepad  qrc_resources.cpp  ui_mainwindow.h
qt/notepad/: mainwindow.cpp  mainwindow.h  mainwindow.ui  notepad.pro  resources.qrc
test1/: CMakeLists.txt  main.cpp
test1/include/: utils.h
test2/: main.cpp
(+787 files in other folders)
